# planettogetheraiv2

./: .dockerignore  .env.example  .gitignore  .npmrc  .replit  .replit.swm  .replit.swn  AI_PLANNING_PROCESSES_STANDARDS.md  ALAP_SCHEDULER_FIX.md  ALGORITHM_IMPLEMENTATION_SUMMARY.md  BRYNTUM_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT-ISSUE-SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DIAGNOSTIC_REPORT.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  GIT_FIX_INSTRUCTIONS.md  KEVIN_BURRELL_FIX_NOTES.md  LICENSE  MAX_AI_TEST_GUIDE.md  PERT_DOCUMENTATION.md  PORTAL_ACCESS_GUIDE.md  PRODUCTION_ACCESS_FIX.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_FIX_NOV7_2024.md  PRODUCTION_SCHEDULER_DOCUMENTATION.md  PRODUCTION_SCHEDULER_FEATURES.md  PROJECT_ACCOMPLISHMENTS_NOV7_2024.md  PROJECT_IMPLEMENTATION_GUIDE.md  PT-Tables-Complete-Documentation.md  PT_TABLE_CONSTRAINT.md  README.md  SCALING_IMPLEMENTATION_COMPLETE.md  SCHEDULER_ALGORITHM_ANALYSIS.md  SCHEDULER_ALGORITHM_STATUS.md  SCHEDULER_ALGORITHM_TESTS.md  SCHEDULER_FUNCTIONS_GUIDE.md  (+133 more)
attached_assets/: Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server-index-ts-Seeding-database-Database-al-1752640318731_1752640318731.txt  Pasted-5-voice-scripts-Generate-Tours-for-Additional-Roles-These-roles-exist-in-your-system-but-don-t-have-1753173222367_1753173222367.txt  Pasted-In-SAP-S-4HANA-Process-Industries-also-known-as-PP-PI-a-Master-Recipe-is-the-equivalent-of-a-rout-1753737154001_1753737154002.txt
bryntum-trial/: .gitignore  README.md
client/: check-density.js  index.html
(+1158 files in other folders)
