[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "joblib>=1.5.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "pyodbc>=5.3.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
